Fix hover on ios

--- a/src/style.less
+++ b/src/style.less
@@ -126,7 +126,13 @@ button {
     transition: all 0.55s ease;
   }
 
-  &:hover button.icon,
+  @media (hover: hover) {
+    &:hover button.icon {
+      opacity: 1;
+      margin-left: -30px;
+    }
+  }
+
   &:active button.icon,
   &:focus button.icon {
     opacity: 1;
